// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobApplicationForm matches snapshot when empty 1`] = `
<DocumentFragment>
  <form
    class="bg-white p-6 rounded-lg shadow-md border border-gray-200"
  >
    <h2
      class="text-xl font-semibold text-gray-800 mb-6"
    >
      Add New Application
    </h2>
    <div
      class="grid grid-cols-1 gap-6 sm:grid-cols-2"
    >
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="company"
        >
          Company
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="company"
          placeholder="Enter company name"
          required=""
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="position"
        >
          Position
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="position"
          placeholder="Enter position title"
          required=""
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="status"
        >
          Status
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="status"
        >
          <option
            value="Applied"
          >
            Applied
          </option>
          <option
            value="Interviewing"
          >
            Interviewing
          </option>
          <option
            value="Offered"
          >
            Offered
          </option>
          <option
            value="Rejected"
          >
            Rejected
          </option>
        </select>
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="appliedDate"
        >
          Applied Date
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="appliedDate"
          required=""
          type="date"
          value="2025-04-05"
        />
      </div>
    </div>
    <div
      class="mt-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 mb-1"
        for="notes"
      >
        Notes
      </label>
      <textarea
        class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
        id="notes"
        placeholder="Add any additional notes"
        rows="4"
      />
    </div>
    <div
      class="mt-6"
    >
      <button
        class="w-full sm:w-auto px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
        type="submit"
      >
        Add Application
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`JobApplicationForm matches snapshot with initial data 1`] = `
<DocumentFragment>
  <form
    class="bg-white p-6 rounded-lg shadow-md border border-gray-200"
  >
    <h2
      class="text-xl font-semibold text-gray-800 mb-6"
    >
      Edit Application
    </h2>
    <div
      class="grid grid-cols-1 gap-6 sm:grid-cols-2"
    >
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="company"
        >
          Company
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="company"
          placeholder="Enter company name"
          required=""
          type="text"
          value="Tech Corp"
        />
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="position"
        >
          Position
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="position"
          placeholder="Enter position title"
          required=""
          type="text"
          value="Frontend Developer"
        />
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="status"
        >
          Status
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="status"
        >
          <option
            value="Applied"
          >
            Applied
          </option>
          <option
            value="Interviewing"
          >
            Interviewing
          </option>
          <option
            value="Offered"
          >
            Offered
          </option>
          <option
            value="Rejected"
          >
            Rejected
          </option>
        </select>
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="appliedDate"
        >
          Applied Date
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="appliedDate"
          required=""
          type="date"
          value="2023-05-15"
        />
      </div>
    </div>
    <div
      class="mt-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 mb-1"
        for="notes"
      >
        Notes
      </label>
      <textarea
        class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
        id="notes"
        placeholder="Add any additional notes"
        rows="4"
      >
        Second round interview scheduled
      </textarea>
    </div>
    <div
      class="mt-6"
    >
      <button
        class="w-full sm:w-auto px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
        type="submit"
      >
        Update Application
      </button>
    </div>
  </form>
</DocumentFragment>
`;
